Source/ISS/Development/NAMS/M9Concur/Vendor/Include/terM9.h

ViStatus _VI_FUNC terM9_fetchDynamicChannelPinOpcode (ViSession vi, ViInt32
                              pinListCount, ViInt32 _VI_FAR pinList[], ViInt32
                              initialPatternIndex, ViInt32 patternCount, ViInt32
                              _VI_FAR pinOpcodeBuffer[]);
ViStatus _VI_FUNC terM9_fetchDynamicPatternModifiers (ViSession vi, ViInt32
                              initialPatternIndex, ViInt32 patternCount, ViInt32
                              _VI_FAR clocksPerPattern[], ViInt32 _VI_FAR
                              TSETIndex[], ViInt32 _VI_FAR controlOpcode[],
                              ViInt32 _VI_FAR controlCount[], ViInt32 _VI_FAR
                              controlCond[], ViBoolean _VI_FAR test[], ViBoolean
                              _VI_FAR failCapture[], ViBoolean _VI_FAR
                              resultCapture[], ViInt32 _VI_FAR PSETIndex[],
                              ViBoolean _VI_FAR step[], ViBoolean _VI_FAR
                              probeCapture[]);
ViStatus _VI_FUNC terM9_fetchStaticChannelPinState (ViSession vi, ViInt32
                              pinListCount, ViInt32 _VI_FAR pinList[], ViInt32
                              _VI_FAR pinStateBuffer[]);
ViStatus _VI_FUNC terM9_getDynamicPattern (ViSession vi, ViPInt32
                              clocksPerPattern, ViPInt32 TSETIndex, ViPInt32
                              controlOpcode, ViPInt32 controlCount, ViPInt32
                              controlCond, ViPBoolean failCapture, ViPBoolean
                              resultCapture, ViPInt32 PSETIndex, ViPBoolean
                              probeCapture);
ViStatus _VI_FUNC terM9_getDynamicPatternClocksPerPattern (ViSession vi,
                              ViPInt32 clocksPerPattern);
ViStatus _VI_FUNC terM9_getDynamicPatternControl (ViSession vi, ViPInt32
                              controlOpcode, ViPInt32 controlCount, ViPInt32
                              controlCond);
ViStatus _VI_FUNC terM9_getDynamicPatternCount (ViSession vi, ViPInt32
                              patternCount);
ViStatus _VI_FUNC terM9_getDynamicPatternFailCapture (ViSession vi, ViPBoolean
                              failCapture);
ViStatus _VI_FUNC terM9_getDynamicPatternIndex (ViSession vi, ViPInt32
                              patternIndex);
ViStatus _VI_FUNC terM9_getDynamicPatternProbeCapture (ViSession vi, ViPBoolean
                              probeCapture);
ViStatus _VI_FUNC terM9_getDynamicPatternProbeTimingSetIndex (ViSession vi,
                              ViPInt32 PSETIndex);
ViStatus _VI_FUNC terM9_getDynamicPatternResultCapture (ViSession vi, ViPBoolean
                              resultCapture);
ViStatus _VI_FUNC terM9_getDynamicPatternTimingSetIndex (ViSession vi, ViPInt32
                              TSETIndex);
ViStatus _VI_FUNC terM9_getFrontPanelSyncConnect (ViSession vi, ViInt32
                              syncIndex, ViPInt32 connect);
ViStatus _VI_FUNC terM9_getFrontPanelSyncLogicSelect (ViSession vi, ViInt32
                              syncIndex, ViPInt32 logicSelect);
ViStatus _VI_FUNC terM9_getFrontPanelSyncPulseSelect (ViSession vi, ViInt32
                              syncIndex, ViPInt32 pulseGeneratorIndex);
ViStatus _VI_FUNC terM9_getFrontPanelSyncResource (ViSession vi, ViInt32
                              syncIndex, ViPInt32 logicSelect, ViPInt32
                              pulseGeneratorIndex, ViPInt32 connect);
ViStatus _VI_FUNC terM9_getHighVoltagePinGroup (ViSession vi, ViInt32
                              HVPinMaxCount, ViPInt32 HVPinCount, ViUInt32
                              _VI_FAR mode[]);
ViStatus _VI_FUNC terM9_getHighVoltagePinGroupSettings (ViSession vi, ViPReal64
                              threshold, ViInt32 HVPinMaxCount, ViPInt32
                              HVPinCount, ViUInt32 _VI_FAR mode[]);
ViStatus _VI_FUNC terM9_getHighVoltagePinGroupThreshold (ViSession vi, ViPReal64
                              threshold);
ViStatus _VI_FUNC terM9_getHighVoltagePinMode (ViSession vi, ViInt32 HVPinIndex,
                              ViPInt32 mode);
ViStatus _VI_FUNC terM9_getProbeMethod (ViSession vi, ViPInt32 probeMethod);
ViStatus _VI_FUNC terM9_getProbeTimingSet (ViSession vi, ViInt32 PSETIndex,
                              ViPReal64 openTime, ViPReal64 closeTime);
ViStatus _VI_FUNC terM9_getProbeTimingSetClose (ViSession vi, ViInt32 PSETIndex,
                              ViPReal64 closeTime);
ViStatus _VI_FUNC terM9_getProbeTimingSetOpen (ViSession vi, ViInt32 PSETIndex,
                              ViPReal64 openTime);
ViStatus _VI_FUNC terM9_getResultIndex (ViSession vi, ViPInt32 resultIndex);
ViStatus _VI_FUNC terM9_getStaticPatternCount (ViSession vi, ViPInt32
                              patternCount);
ViStatus _VI_FUNC terM9_getStaticPatternProbeCapture (ViSession vi, ViPBoolean
                              probeCapture);
ViStatus _VI_FUNC terM9_getSyncResourcePulseWidth (ViSession vi, ViInt32
                              pulseGeneratorIndex, ViPReal64 pulseWidth);
ViStatus _VI_FUNC terM9_getUserClock (ViSession vi, ViInt32 userClockIndex,
                              ViPInt32 connect, ViPReal64 highVoltageLevel,
                              ViPReal64 lowVoltageLevel, ViPInt32 mode, ViInt32
                              phaseEntryMaxCount, ViPInt32 phaseEntryCount,
                              ViReal64 _VI_FAR phaseEntry[], ViPInt32 trigger);
ViStatus _VI_FUNC terM9_getUserClockConnect (ViSession vi, ViInt32
                              userClockIndex, ViPInt32 connect);
ViStatus _VI_FUNC terM9_getUserClockHighVoltageLevel (ViSession vi, ViInt32
                              userClockIndex, ViPReal64 highVoltageLevel);
ViStatus _VI_FUNC terM9_getUserClockLowVoltageLevel (ViSession vi, ViInt32
                              userClockIndex, ViPReal64 lowVoltageLevel);
ViStatus _VI_FUNC terM9_getUserClockMode (ViSession vi, ViInt32 userClockIndex,
                              ViPInt32 mode);
ViStatus _VI_FUNC terM9_getUserClockPhase (ViSession vi, ViInt32 userClockIndex,
                              ViInt32 phaseEntryMaxCount, ViPInt32
                              phaseEntryCount, ViReal64 _VI_FAR phaseEntry[]);
ViStatus _VI_FUNC terM9_getUserClockPhaseAssert (ViSession vi, ViInt32
                              userClockIndex, ViInt32 phaseIndex, ViPReal64
                              assertTime);
ViStatus _VI_FUNC terM9_getUserClockPhaseReturn (ViSession vi, ViInt32
                              userClockIndex, ViInt32 phaseIndex, ViPReal64
                              returnTime);
ViStatus _VI_FUNC terM9_getUserClockTrigger (ViSession vi, ViInt32
                              userClockIndex, ViPInt32 trigger);
ViStatus _VI_FUNC terM9_loadDynamicPattern (ViSession vi, ViBoolean step,
                              ViBoolean test);
ViStatus _VI_FUNC terM9_loadProbeExpectData (ViSession vi, ViInt32
                              expectDataCount, ViInt32 _VI_FAR expectData[]);
ViStatus _VI_FUNC terM9_loadProbeMapData (ViSession vi, ViInt32 mapDataCount,
                              ViInt32 _VI_FAR mapData[]);
ViStatus _VI_FUNC terM9_loadProbeTimingSetIndexes (ViSession vi, ViInt32
                              initialPatternIndex, ViInt32 patternCount, ViInt32
                              _VI_FAR timingIndexes[], ViBoolean stepsOnly);
ViStatus _VI_FUNC terM9_modifyDynamicChannelPinOpcode (ViSession vi, ViInt32
                              pinListCount, ViInt32 _VI_FAR pinList[], ViInt32
                              initialPatternIndex, ViInt32 patternCount, ViInt32
                              pinOpcodeBufferCount, ViInt32 _VI_FAR
                              pinOpcodeBuffer[]);
ViStatus _VI_FUNC terM9_prepareDynamicProbeLoading (ViSession vi);
ViStatus _VI_FUNC terM9_prepareStaticProbeLoading (ViSession vi);
ViStatus _VI_FUNC terM9_setDynamicPattern (ViSession vi, ViInt32
                              clocksPerPattern, ViInt32 TSETIndex, ViInt32
                              controlOpcode, ViInt32 controlCount, ViInt32
                              controlCond, ViBoolean failCapture, ViBoolean
                              resultCapture, ViInt32 PSETIndex, ViBoolean
                              probeCapture);
ViStatus _VI_FUNC terM9_setDynamicPatternClocksPerPattern (ViSession vi, ViInt32
                              clocksPerPattern);
ViStatus _VI_FUNC terM9_setDynamicPatternControl (ViSession vi, ViInt32
                              controlOpcode, ViInt32 controlCount, ViInt32
                              controlCond);
ViStatus _VI_FUNC terM9_setDynamicPatternFailCapture (ViSession vi, ViBoolean
                              failCapture);
ViStatus _VI_FUNC terM9_setDynamicPatternIndex (ViSession vi, ViInt32
                              patternIndex);
ViStatus _VI_FUNC terM9_setDynamicPatternProbeCapture (ViSession vi, ViBoolean
                              probeCapture);
ViStatus _VI_FUNC terM9_setDynamicPatternProbeTimingSetIndex (ViSession vi,
                              ViInt32 PSETIndex);
ViStatus _VI_FUNC terM9_setDynamicPatternResultCapture (ViSession vi, ViBoolean
                              resultCapture);
ViStatus _VI_FUNC terM9_setDynamicPatternTimingSetIndex (ViSession vi, ViInt32
                              TSETIndex);
ViStatus _VI_FUNC terM9_setFrontPanelSyncConnect (ViSession vi, ViInt32
                              syncIndex, ViInt32 connect);
ViStatus _VI_FUNC terM9_setFrontPanelSyncLogicSelect (ViSession vi, ViInt32
                              syncIndex, ViInt32 logicSelect);
ViStatus _VI_FUNC terM9_setFrontPanelSyncPulseSelect (ViSession vi, ViInt32
                              syncIndex, ViInt32 pulseGeneratorIndex);
ViStatus _VI_FUNC terM9_setFrontPanelSyncResource (ViSession vi, ViInt32
                              syncIndex, ViInt32 logicSelect, ViInt32
                              pulseGeneratorIndex, ViInt32 connect);
ViStatus _VI_FUNC terM9_setHighVoltagePinGroup (ViSession vi, ViInt32
                              HVPinCount, ViUInt32 _VI_FAR mode[]);
ViStatus _VI_FUNC terM9_setHighVoltagePinGroupSettings (ViSession vi, ViReal64
                              threshold, ViInt32 HVPinCount, ViUInt32 _VI_FAR
                              mode[]);
ViStatus _VI_FUNC terM9_setHighVoltagePinGroupThreshold (ViSession vi, ViReal64
                              threshold);
ViStatus _VI_FUNC terM9_setHighVoltagePinMode (ViSession vi, ViInt32 HVPinIndex,
                              ViInt32 mode);
ViStatus _VI_FUNC terM9_setProbeMethod (ViSession vi, ViInt32 probeMethod);
ViStatus _VI_FUNC terM9_setProbeTimingSet (ViSession vi, ViInt32 PSETIndex,
                              ViReal64 openTime, ViReal64 closeTime);
ViStatus _VI_FUNC terM9_setProbeTimingSetClose (ViSession vi, ViInt32 PSETIndex,
                              ViReal64 closeTime);
ViStatus _VI_FUNC terM9_setProbeTimingSetOpen (ViSession vi, ViInt32 PSETIndex,
                              ViReal64 openTime);
ViStatus _VI_FUNC terM9_setStaticPatternProbeCapture (ViSession vi, ViBoolean
                              probeCapture);
ViStatus _VI_FUNC terM9_setSyncResourcePulseWidth (ViSession vi, ViInt32
                              pulseGeneratorIndex, ViReal64 pulseWidth);