Source/Core/Source/System/TPExec_TETS/Source/TERM9.vb


    Declare Function terM9_getDynamicPattern Lib "terM9_32.dll" (ByVal vi As Integer, ByRef clocksPerPattern As Integer, ByRef TSETIdx As Integer, ByRef controlOpcode As Integer, ByRef controlCount As Integer, ByRef controlCond As Integer, ByRef failCapture As Short, ByRef resultCapture As Short, ByRef PSETIdx As Integer, ByRef probeCapture As Short) As Integer

    Declare Function terM9_getDynamicPatternClocksPerPattern Lib "terM9_32.dll" (ByVal vi As Integer, ByRef clocksPerPattern As Integer) As Integer

    Declare Function terM9_getDynamicPatternTimingSetIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByRef TSETIdx As Integer) As Integer

    Declare Function terM9_getDynamicPatternControl Lib "terM9_32.dll" (ByVal vi As Integer, ByRef controlOpcode As Integer, ByRef controlCount As Integer, ByRef controlCond As Integer) As Integer

    Declare Function terM9_getDynamicPatternFailCapture Lib "terM9_32.dll" (ByVal vi As Integer, ByRef failCapture As Short) As Integer

    Declare Function terM9_getDynamicPatternResultCapture Lib "terM9_32.dll" (ByVal vi As Integer, ByRef resultCapture As Short) As Integer

    Declare Function terM9_getDynamicPatternProbeTimingSetIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByRef PSETIdx As Integer) As Integer

    Declare Function terM9_getDynamicPatternProbeCapture Lib "terM9_32.dll" (ByVal vi As Integer, ByRef probeCapture As Short) As Integer

    Declare Function terM9_getDynamicPatternCount Lib "terM9_32.dll" (ByVal vi As Integer, ByRef patternCount As Integer) As Integer

    Declare Function terM9_getDynamicPatternIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByRef patternIdx As Integer) As Integer

    Declare Function terM9_getResultIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByRef resultIdx As Integer) As Integer

    Declare Function terM9_setDynamicPattern Lib "terM9_32.dll" (ByVal vi As Integer, ByVal clocksPerPattern As Integer, ByVal TSETIdx As Integer, ByVal controlOpcode As Integer, ByVal controlCount As Integer, ByVal controlCond As Integer, ByVal failCapture As Short, ByVal resultCapture As Short, ByVal PSETIdx As Integer, ByVal probeCapture As Short) As Integer

    Declare Function terM9_setDynamicPatternClocksPerPattern Lib "terM9_32.dll" (ByVal vi As Integer, ByVal clocksPerPattern As Integer) As Integer

    Declare Function terM9_setDynamicPatternTimingSetIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByVal TSETIdx As Integer) As Integer

    Declare Function terM9_setDynamicPatternControl Lib "terM9_32.dll" (ByVal vi As Integer, ByVal controlOpcode As Integer, ByVal controlCount As Integer, ByVal controlCond As Integer) As Integer

    Declare Function terM9_setDynamicPatternFailCapture Lib "terM9_32.dll" (ByVal vi As Integer, ByVal failCapture As Short) As Integer

    Declare Function terM9_setDynamicPatternResultCapture Lib "terM9_32.dll" (ByVal vi As Integer, ByVal resultCapture As Short) As Integer

    Declare Function terM9_setDynamicPatternProbeTimingSetIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByVal PSETIdx As Integer) As Integer

    Declare Function terM9_setDynamicPatternProbeCapture Lib "terM9_32.dll" (ByVal vi As Integer, ByVal probeCapture As Short) As Integer

    Declare Function terM9_setDynamicPatternIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByVal patternIdx As Integer) As Integer

    Declare Function terM9_loadDynamicPattern Lib "terM9_32.dll" (ByVal vi As Integer, ByVal patternStep As Short, ByVal test As Short) As Integer

    Declare Function terM9_fetchDynamicChannelPinOpcode Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByVal initPatternIdx As Integer, ByVal patternCount As Integer, ByRef pinOpcodeBuffer As Integer) As Integer

    Declare Function terM9_modifyDynamicChannelPinOpcode Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByVal initPatternIdx As Integer, ByVal patternCount As Integer, ByVal pinOpcodeCount As Integer, ByRef pinOpcodeBuffer As Integer) As Integer

    Declare Function terM9_fetchDynamicPatternModifiers Lib "terM9_32.dll" (ByVal vi As Integer, ByVal initPatternIdx As Integer, ByVal patternCount As Integer, ByRef clocksPerPattern As Integer, ByRef TSETIdx As Integer, ByRef controlOpcode As Integer, ByRef controlCount As Integer, ByRef controlCond As Integer, ByRef test As Short, ByRef failCapture As Short, ByRef resultCapture As Short, ByRef PSETIdx As Integer, ByRef patternStep As Short, ByRef probeCapture As Short) As Integer

    Declare Function terM9_getStaticPatternProbeCapture Lib "terM9_32.dll" (ByVal vi As Integer, ByRef probeCapture As Short) As Integer

    Declare Function terM9_getStaticPatternCount Lib "terM9_32.dll" (ByVal vi As Integer, ByRef patternCount As Integer) As Integer

    Declare Function terM9_setStaticPatternProbeCapture Lib "terM9_32.dll" (ByVal vi As Integer, ByVal probeCapture As Short) As Integer

    Declare Function terM9_fetchStaticChannelPinState Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByRef pinStateBuffer As Integer) As Integer

    Declare Function terM9_getProbeMethod Lib "terM9_32.dll" (ByVal vi As Integer, ByRef probeMethod As Integer) As Integer

    Declare Function terM9_setProbeMethod Lib "terM9_32.dll" (ByVal vi As Integer, ByVal probeMethod As Integer) As Integer

    Declare Function terM9_loadProbeExpectData Lib "terM9_32.dll" (ByVal vi As Integer, ByVal expectDataCount As Integer, ByRef expectData As Integer) As Integer

    Declare Function terM9_loadProbeMapData Lib "terM9_32.dll" (ByVal vi As Integer, ByVal mapDataCount As Integer, ByRef mapData As Integer) As Integer

    Declare Function terM9_loadProbeTimingSetIndexes Lib "terM9_32.dll" (ByVal vi As Integer, ByVal initPatternIdx As Integer, ByVal patternCount As Integer, ByRef timingIndexes As Integer, ByVal stepOnly As Short) As Integer

    Declare Function terM9_prepareDynamicProbeLoading Lib "terM9_32.dll" (ByVal vi As Integer) As Integer

    Declare Function terM9_getProbeTimingSet Lib "terM9_32.dll" (ByVal vi As Integer, ByVal PSETIdx As Integer, ByRef openTime As Double, ByRef closeTime As Double) As Integer

    Declare Function terM9_getProbeTimingSetOpen Lib "terM9_32.dll" (ByVal vi As Integer, ByVal PSETIdx As Integer, ByRef openTime As Double) As Integer

    Declare Function terM9_getProbeTimingSetClose Lib "terM9_32.dll" (ByVal vi As Integer, ByVal PSETIdx As Integer, ByRef closeTime As Double) As Integer

    Declare Function terM9_setProbeTimingSet Lib "terM9_32.dll" (ByVal vi As Integer, ByVal PSETIdx As Integer, ByVal openTime As Double, ByVal closeTime As Double) As Integer

    Declare Function terM9_setProbeTimingSetOpen Lib "terM9_32.dll" (ByVal vi As Integer, ByVal PSETIdx As Integer, ByVal openTime As Double) As Integer

    Declare Function terM9_setProbeTimingSetClose Lib "terM9_32.dll" (ByVal vi As Integer, ByVal PSETIdx As Integer, ByVal closeTime As Double) As Integer

    Declare Function terM9_prepareStaticProbeLoading Lib "terM9_32.dll" (ByVal vi As Integer) As Integer

    Declare Function terM9_getHighVoltagePinGroupSettings Lib "terM9_32.dll" (ByVal vi As Integer, ByRef threshold As Double, ByVal HVPinMaxCount As Integer, ByRef HVPinCount As Integer, ByRef mode As Integer) As Integer

    Declare Function terM9_getHighVoltagePinGroup Lib "terM9_32.dll" (ByVal vi As Integer, ByVal HVPinMaxCount As Integer, ByRef HVPinCount As Integer, ByRef mode As Integer) As Integer

    Declare Function terM9_getHighVoltagePinMode Lib "terM9_32.dll" (ByVal vi As Integer, ByVal HVPinIdx As Integer, ByRef mode As Integer) As Integer

    Declare Function terM9_getHighVoltagePinGroupThreshold Lib "terM9_32.dll" (ByVal vi As Integer, ByRef threshold As Double) As Integer

    Declare Function terM9_setHighVoltagePinGroupSettings Lib "terM9_32.dll" (ByVal vi As Integer, ByVal threshold As Double, ByVal HVPinCount As Integer, ByRef mode As Integer) As Integer

    Declare Function terM9_setHighVoltagePinGroup Lib "terM9_32.dll" (ByVal vi As Integer, ByVal HVPinCount As Integer, ByRef mode As Integer) As Integer

    Declare Function terM9_setHighVoltagePinMode Lib "terM9_32.dll" (ByVal vi As Integer, ByVal HVPinIdx As Integer, ByVal mode As Integer) As Integer

    Declare Function terM9_setHighVoltagePinGroupThreshold Lib "terM9_32.dll" (ByVal vi As Integer, ByVal threshold As Double) As Integer

    Declare Function terM9_getFrontPanelSyncResource Lib "terM9_32.dll" (ByVal vi As Integer, ByVal syncIdx As Integer, ByRef logicSelect As Integer, ByRef pulseGenIdx As Integer, ByRef connect As Integer) As Integer

    Declare Function terM9_getFrontPanelSyncLogicSelect Lib "terM9_32.dll" (ByVal vi As Integer, ByVal syncIdx As Integer, ByRef logicSelect As Integer) As Integer

    Declare Function terM9_getFrontPanelSyncPulseSelect Lib "terM9_32.dll" (ByVal vi As Integer, ByVal syncIdx As Integer, ByRef pulseGenIdx As Integer) As Integer

    Declare Function terM9_getFrontPanelSyncConnect Lib "terM9_32.dll" (ByVal vi As Integer, ByVal syncIdx As Integer, ByRef connect As Integer) As Integer

    Declare Function terM9_setFrontPanelSyncResource Lib "terM9_32.dll" (ByVal vi As Integer, ByVal syncIdx As Integer, ByVal logicSelect As Integer, ByVal pulseGenIdx As Integer, ByVal connect As Integer) As Integer

    Declare Function terM9_setFrontPanelSyncLogicSelect Lib "terM9_32.dll" (ByVal vi As Integer, ByVal syncIdx As Integer, ByVal logicSelect As Integer) As Integer

    Declare Function terM9_setFrontPanelSyncPulseSelect Lib "terM9_32.dll" (ByVal vi As Integer, ByVal syncIdx As Integer, ByVal pulseGenIdx As Integer) As Integer

    Declare Function terM9_setFrontPanelSyncConnect Lib "terM9_32.dll" (ByVal vi As Integer, ByVal syncIdx As Integer, ByVal connect As Integer) As Integer

    Declare Function terM9_getSyncResourcePulseWidth Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pulseGenIdx As Integer, ByRef pulseWidth As Double) As Integer

    Declare Function terM9_setSyncResourcePulseWidth Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pulseGenIdx As Integer, ByVal pulseWidth As Double) As Integer

    Declare Function terM9_getUserClock Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByRef connect As Integer, ByRef highVoltageLevel As Double, ByRef lowVoltageLevel As Double, ByRef mode As Integer, ByVal phaseEntryMaxCount As Integer, ByRef phaseEntryCount As Integer, ByRef phaseEntry As Double, ByRef trigger As Integer) As Integer

    Declare Function terM9_getUserClockConnect Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByRef connect As Integer) As Integer

    Declare Function terM9_getUserClockMode Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByRef mode As Integer) As Integer

    Declare Function terM9_getUserClockPhase Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByVal phaseEntryMaxCount As Integer, ByRef phaseEntryCount As Integer, ByRef phaseEntry As Double) As Integer

    Declare Function terM9_getUserClockPhaseAssert Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByVal PhaseIdx As Integer, ByRef assertTime As Double) As Integer

    Declare Function terM9_getUserClockPhaseReturn Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByVal PhaseIdx As Integer, ByRef returnTime As Double) As Integer

    Declare Function terM9_getUserClockTrigger Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByRef trigger As Integer) As Integer

    Declare Function terM9_getUserClockHighVoltageLevel Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByRef highVoltageLevel As Double) As Integer

    Declare Function terM9_getUserClockLowVoltageLevel Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByRef lowVoltageLevel As Double) As Integer
